chandeliers-lus/tests/warn/dead_code/unused.stderr
error: method `step` is never used
 --> tests/warn/dead_code/unused.rs:8:10
  |
8 |     node count2() returns (n : int);
  |          ^^^^^^ method in this implementation
  |
note: the lint level is defined here
 --> tests/warn/dead_code/unused.rs:2:9
  |
2 | #![deny(dead_code)]
  |         ^^^^^^^^^

error: constant `X__lus_0_global` is never used
  --> tests/warn/dead_code/unused.rs:14:11
   |
14 |     const X: int = 0;
   |           ^
